// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies a component as the text label 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "borderTopLeftRadius": 6.285714285714286,
        "borderTopRightRadius": 6.285714285714286,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(80, 69, 57)",
        "bottom": 0,
        "height": 1.5714285714285714,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 88,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 6.285714285714286,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        <Text
          style={
            {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        <Text
          style={
            {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 88,
          },
          {
            "paddingBottom": 6.285714285714286,
            "paddingTop": 37.714285714285715,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies default textAlign based on default RTL 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "borderTopLeftRadius": 6.285714285714286,
        "borderTopRightRadius": 6.285714285714286,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(80, 69, 57)",
        "bottom": 0,
        "height": 1.5714285714285714,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 88,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 6.285714285714286,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 88,
          },
          {
            "paddingBottom": 6.285714285714286,
            "paddingTop": 37.714285714285715,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies height to multiline Outline TextInput 1`] = `
<View
  style={{}}
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 9.428571428571429,
        },
        false,
        {
          "backgroundColor": "rgb(255, 251, 255)",
          "borderColor": "rgb(130, 117, 104)",
          "borderRadius": 6.285714285714286,
          "borderWidth": 1,
        },
        undefined,
      ]
    }
    testID="text-input-outline"
  />
  <View
    style={
      [
        {
          "paddingBottom": 0,
        },
        {
          "minHeight": 100,
          "paddingTop": 12.571428571428571,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4.7142857142857135,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "backgroundColor": "rgb(255, 251, 255)",
            "bottom": 6.285714285714286,
            "left": 15.714285714285714,
            "maxHeight": 2.0952380952380953,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 9.428571428571429,
            "transform": [
              {
                "translateX": -4.7142857142857135,
              },
            ],
            "width": 18.857142857142858,
          }
        }
      />
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "backgroundColor": "rgb(255, 251, 255)",
            "color": "transparent",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 12.571428571428571,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "opacity": 1,
            "paddingHorizontal": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": 63,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52.57142857142857,
              },
              {
                "scale": 0.75,
              },
              {
                "scaleY": 0.2,
              },
            ],
            "width": -25.142857142857142,
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-background"
      >
        Outline Input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingHorizontal": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 62,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52.57142857142857,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-active"
      >
        Outline Input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingHorizontal": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 62,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52.57142857142857,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-inactive"
      >
        Outline Input
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onLayout={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 100,
          },
          {
            "paddingBottom": 26,
            "paddingTop": 26,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingHorizontal": 25.142857142857142,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-outlined"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies textAlign center 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "borderTopLeftRadius": 6.285714285714286,
        "borderTopRightRadius": 6.285714285714286,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(80, 69, 57)",
        "bottom": 0,
        "height": 1.5714285714285714,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 88,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 6.285714285714286,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 88,
          },
          {
            "paddingBottom": 6.285714285714286,
            "paddingTop": 37.714285714285715,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 25.142857142857142,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly renders left-side affix adornment, and right-side icon adornment 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "borderTopLeftRadius": 6.285714285714286,
        "borderTopRightRadius": 6.285714285714286,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(80, 69, 57)",
        "bottom": 0,
        "height": 1.5714285714285714,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 88,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 6.285714285714286,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 88,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 88,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 88,
          },
          {
            "paddingBottom": 6.285714285714286,
            "paddingTop": 37.714285714285715,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 88,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginLeft": 0,
            "marginRight": 62.85714285714286,
            "paddingLeft": 62.85714285714286,
            "paddingRight": 25.142857142857142,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "left": 25.142857142857142,
        "opacity": 1,
        "position": "absolute",
        "top": null,
      }
    }
    testID="left-affix-adornment"
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "color": "rgb(80, 69, 57)",
          },
          {
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
          },
          {
            "color": "#f44336",
          },
        ]
      }
      testID="left-affix-adornment-text"
    >
      /100
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 37.714285714285715,
          "justifyContent": "center",
          "position": "absolute",
          "width": 37.714285714285715,
        },
        {
          "right": 25.142857142857142,
          "top": 25.142857142857142,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": undefined,
              "borderColor": "rgb(130, 117, 104)",
              "borderRadius": 31.42857142857143,
              "borderWidth": 0,
              "elevation": 0,
              "height": 62.85714285714286,
              "margin": 0,
              "overflow": "hidden",
              "width": 62.85714285714286,
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityTraits="button"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            centered={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
              ]
            }
            testID="right-icon-adornment"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgb(80, 69, 57)",
                    "fontSize": 37.714285714285715,
                  },
                  [
                    {
                      "lineHeight": 37.714285714285715,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰋑
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`correctly renders left-side icon adornment, and right-side affix adornment 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "borderTopLeftRadius": 6.285714285714286,
        "borderTopRightRadius": 6.285714285714286,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(80, 69, 57)",
        "bottom": 0,
        "height": 1.5714285714285714,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 88,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 22,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgb(133, 84, 0)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 88,
            "paddingRight": 88,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgb(80, 69, 57)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "maxWidth": 114.71428571428571,
            "opacity": 0,
            "paddingLeft": 88,
            "paddingRight": 88,
            "position": "absolute",
            "textAlign": "left",
            "top": 47,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -18.714285714285715,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgb(133, 84, 0)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgb(80, 69, 57)"
      selectionColor="rgb(133, 84, 0)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 88,
          },
          {
            "paddingBottom": 6.285714285714286,
            "paddingTop": 37.714285714285715,
          },
          {
            "color": "rgb(31, 27, 22)",
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
            "minWidth": 102.14285714285714,
            "paddingLeft": 88,
            "paddingRight": 88,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginLeft": 62.85714285714286,
            "marginRight": 0,
            "paddingLeft": 25.142857142857142,
            "paddingRight": 62.85714285714286,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 37.714285714285715,
          "justifyContent": "center",
          "position": "absolute",
          "width": 37.714285714285715,
        },
        {
          "left": 25.142857142857142,
          "top": 25.142857142857142,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": undefined,
              "borderColor": "rgb(130, 117, 104)",
              "borderRadius": 31.42857142857143,
              "borderWidth": 0,
              "elevation": 0,
              "height": 62.85714285714286,
              "margin": 0,
              "overflow": "hidden",
              "width": 62.85714285714286,
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityTraits="button"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            centered={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
              ]
            }
            testID="left-icon-adornment"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgb(80, 69, 57)",
                    "fontSize": 37.714285714285715,
                  },
                  [
                    {
                      "lineHeight": 37.714285714285715,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰋑
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 25.142857142857142,
        "top": null,
      }
    }
    testID="right-affix-adornment"
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "color": "rgb(80, 69, 57)",
          },
          {
            "fontFamily": "System",
            "fontSize": 25.142857142857142,
            "fontWeight": undefined,
            "letterSpacing": 0.2357142857142857,
            "lineHeight": undefined,
          },
          {
            "color": "#f44336",
          },
        ]
      }
      testID="right-affix-adornment-text"
    >
      /100
    </Text>
  </View>
</View>
`;
